# agentic-etl-poc

./: .gitignore  README.md  prompt.txt  prompt_w_o_dq.txt  prompt_w_o_verify.txt  pyproject.toml  requirements.txt
etl_agent/: agents.py  cli.py  memory.py  operator.py  ops.py  plan.yaml  runtime.py  templates.py  tools.py
etl_agent/prompts/: etl_agent_prompt.txt
