[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl_agent"
version = "0.1.0"
description = "Prompt-to-Pipeline ETL agent : plan, fetch, transform, load, verify, alert."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "openai>=1.30.0",
  "openai-agents>=0.2.0",
  "pandas>=2.0.0",
  "duckdb>=1.0.0",
  "pyarrow>=12.0.0",
  "SQLAlchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "requests>=2.31.0",
  "pydantic>=2.6.0",
  "rich>=13.7.0"
]

[project.optional-dependencies]
orchestrator = ["prefect>=2.18.0"]

[project.scripts]
etl_agent = "etl_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["etl_agent*"]